# girlfriend

./: .gitignore  LICENSE  README.md  TEST.md  build.md  pyproject.toml  requirements.txt
assets/: logo.txt  sample_messages.txt
debian/: changelog  control  copyright  files  girlfriend.1  girlfriend.postinst.debhelper  girlfriend.prerm.debhelper  girlfriend.substvars  install  manpages  watch
debian/girlfriend/DEBIAN/: control  md5sums  postinst  prerm
debian/girlfriend/usr/lib/python3/dist-packages/girlfriend/: __init__.py  ai_chat.py  ascii_art.py  cli.py  config.py  messages.py  moods.py  voice.py
debian/girlfriend/usr/lib/python3/dist-packages/girlfriend-2.0.0.dist-info/: METADATA  entry_points.txt
debian/tests/: smoke
debian/upstream/: metadata
girlfriend/: __init__.py  ai_chat.py  cli.py  config.py  notification.py  streaks.py  system_monitor.py
tests/: test_basic.py
